--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,29 @@
 * {
     font-family: Arial;
 }
+
+nav ul {
+    float: left;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+    list-style-type: none;
+}
+
+nav ul li {
+    display: inline;
+}
+
+nav ul li.active {
+    font-weight: bold;
+}
+
+nav ul li a {
+    float: left;
+    width: 5em;
+    text-decoration: none;
+    color: black;
+    border: 1px solid black;
+    padding: 0.2em 0.6em;
+    text-align: center;
+}
