--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,78 @@
-* {
-    font-family: Arial;
+body,
+input,
+textarea,
+select {
+    font-family: 'Source Sans Pro', sans-serif;
+    font-weight: 400;
+    color: #919499;
+    font-size: 14pt;
+    line-height: 1.25em;
+    letter-spacing: 0.025em;
 }
 
-nav ul li.active {
+h1,
+h2,
+h3 {
     font-weight: bold;
+}
+
+a {
+    color: #919499;
+    text-decoration: none;
+}
+
+a:hover {
+    color: #666668;
+    text-decoration: none;
+}
+
+#headernav {
+    background-color: #222;
+    padding-bottom: 1em;
+}
+
+nav {
+
+    margin-top: 1em;
+    border-radius: 0.35em;
+    box-shadow: inset 0px 0px 1px 1px rgba(255, 255, 255, 0.25);
+    padding: 0 1.5em 0 1.5em;
+    text-transform: uppercase;
+    font-size: 0.7em;
+    letter-spacing: 0.25em;
+    height: 5em;
+    line-height: 5em;
+}
+
+@media (max-width: 991.98px) {
+    .navbar-collapse {
+        position: absolute;
+        max-width: 300px;
+        top: 5em;
+        left: 0;
+        right: 0;
+        background-color: #222 !important;
+        z-index: 9999;
+        padding: 1em;
+    }
+
+    .navbar-nav {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+}
+
+.btn:hover {
+    background-color: #666668;
+}
+
+footer {
+    background-color: #222;
+    padding: 1em;
+    margin-top: 2em;
+    border-bottom: 0;
+}
+
+footer a {
+    font-size: 1.2em;
 }
