--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,4 @@
-body,
-input,
-textarea,
-select {
+body {
     font-family: 'Source Sans Pro', sans-serif;
     font-weight: 400;
     color: #919499;
@@ -19,6 +16,7 @@ h3 {
 a {
     color: #919499;
     text-decoration: none;
+    border-radius: 5px;
 }
 
 a:hover {
@@ -64,6 +62,14 @@ nav {
 
 .btn:hover {
     background-color: #666668;
+}
+
+
+form {
+    background-color: #2222225e;
+    padding: 2em;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.1);
 }
 
 footer {
