--- a/styles/style.css
+++ b/styles/style.css
@@ -16,7 +16,8 @@ h3 {
 a {
     color: #919499;
     text-decoration: none;
-    border-radius: 5px;
+    border-bottom: 2px solid rgba(0, 0, 0, 0.1);
+    padding-bottom: 2px;
 }
 
 a:hover {
