navbar_and_messagesender_style

--- a/styles/pages/gallery.css
+++ b/styles/pages/gallery.css
@@ -2,7 +2,7 @@
     background-color: #2222225e;
     padding: 2em;
     border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 input[type="file"]::file-selector-button {
@@ -11,6 +11,7 @@ input[type="file"]::file-selector-button {
     border-radius: 10px;
     border: none;
 }
+
 #imageUploadForm label {
     color: #343a40;
 }
