--- a/styles/style.css
+++ b/styles/style.css
@@ -55,6 +55,11 @@ nav {
         padding: 1em;
     }
 
+    nav {
+        box-shadow: none;
+        border-radius: 0;
+    }
+
     .navbar-nav {
         flex-direction: column;
         align-items: flex-start;
@@ -70,7 +75,7 @@ form {
     background-color: #2222225e;
     padding: 2em;
     border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 footer {
