--- a/styles/pages/gallery.css
+++ b/styles/pages/gallery.css
@@ -15,3 +15,14 @@ input[type="file"]::file-selector-button {
 #imageUploadForm label {
     color: #343a40;
 }
+
+.custom-img {
+    height: 300px;
+    object-fit: cover;
+    object-position: center;
+}
+
+.upload-form {
+    max-width: 500px;
+    margin: auto;
+}
